# CppPathTracer

./: .gitignore  Buffer.h  CMakeLists.txt  Camera.h  Dielectric.h  Lambertian.h  Metal.h  Parser.h  README.md  Renderer.h  Skybox.h  Sphere.h  Structs.h  Util.h  Vec3.cpp  Vec3.h  World.h  main.cpp  out_ref.ppm  scene.txt
doc/: graph.tex
